# mash_up_maker

./: .gitignore  DESIGN.md  README.md  dev.cmd  dev.ps1
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  ordering.py  worker.py
backend/app/audio/: analyze.py  autoeq.py  decode.py  fx.py  peaks.py  preview.py  render.py  samples.py  stems.py  stretch.py
backend/app/routers/: export.py  library.py  projects.py  samples.py  seams.py
backend/tests/: conftest.py  test_autogain_autoeq.py  test_library_correction.py  test_render.py  test_samples.py  test_seam_editor.py  test_smoke.py  test_stems.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  compat.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/audio/: gridCheckPlayer.ts  previewEngine.ts
frontend/src/components/: CurveLane.tsx  OverviewStrip.tsx  SeamWaveform.tsx  TimeInput.tsx  palette.ts  useElementWidth.ts
frontend/src/views/: LibraryView.tsx  SeamEditor.tsx  SetTimeline.tsx  TrackInspector.tsx
