[project]
name = "mashup-maker-backend"
version = "0.1.0"
description = "Mash-Up Maker backend: library, analysis, DSP, rendering"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "pedalboard>=0.9",
    "demucs>=4.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
